data/derived/fa15/progs/unify/prog0386.ml.out
Characters 128-148:
  if List.mem seen', seen
     ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type bool
